--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,9 @@
   command = "npm run build"
   publish = "dist/snipcart-angular-sanity"
   functions = "src/functions"
+
+[dev]
+  command = "npm start"
+  port = 3333
+  publish = "src"
+  functions = "src/functions"
